fixes layout issues with inspector option, adds global layout style helpers

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -218,6 +218,10 @@ $Icons
     margin-bottom: 1em;
 }
 
+.g-negative-margin-top {
+    margin-top: -1em;
+}
+
 .flush-bottom {
     margin-bottom: 0;
 }
