--- a/ui/controls/inspector-option.reel/inspector-option.css
+++ b/ui/controls/inspector-option.reel/inspector-option.css
@@ -1,1 +1,1 @@
-.InspectorOption{outline:none}.InspectorOption>*{border-top:1px solid hsla(0,0%,100%,.2);border-bottom:1px solid hsla(0,0%,100%,.2)}.InspectorOption+.InspectorOption>*,.InspectorOption:first-child>*{border-top-color:transparent}.InspectorOption.selected>*{border-color:#00a7ff}
+.InspectorOption{outline:none}.Inspector-body .InspectorOption{margin-left:-1em;margin-right:-1em}.InspectorOption>*{border-top:1px solid hsla(0,0%,100%,.2);border-bottom:1px solid hsla(0,0%,100%,.2)}.InspectorOption+.InspectorOption>*,.InspectorOption:first-child>*{border-top-color:transparent}.InspectorOption.selected>*{border-color:#00a7ff}
